; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/typec/extr_class.c_altmode_id_get.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/typec/extr_class.c_altmode_id_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.ida = type { i32 }
%struct.TYPE_6__ = type { %struct.ida }
%struct.TYPE_5__ = type { %struct.ida }
%struct.TYPE_4__ = type { %struct.ida }

@GFP_KERNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*)* @altmode_id_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @altmode_id_get(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca %struct.ida*, align 8
  store %struct.device* %0, %struct.device** %2, align 8
  %4 = load %struct.device*, %struct.device** %2, align 8
  %5 = call i64 @is_typec_partner(%struct.device* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load %struct.device*, %struct.device** %2, align 8
  %9 = call %struct.TYPE_6__* @to_typec_partner(%struct.device* %8)
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 0
  store %struct.ida* %10, %struct.ida** %3, align 8
  br label %24

11:                                               ; preds = %1
  %12 = load %struct.device*, %struct.device** %2, align 8
  %13 = call i64 @is_typec_plug(%struct.device* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %11
  %16 = load %struct.device*, %struct.device** %2, align 8
  %17 = call %struct.TYPE_5__* @to_typec_plug(%struct.device* %16)
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  store %struct.ida* %18, %struct.ida** %3, align 8
  br label %23

19:                                               ; preds = %11
  %20 = load %struct.device*, %struct.device** %2, align 8
  %21 = call %struct.TYPE_4__* @to_typec_port(%struct.device* %20)
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  store %struct.ida* %22, %struct.ida** %3, align 8
  br label %23

23:                                               ; preds = %19, %15
  br label %24

24:                                               ; preds = %23, %7
  %25 = load %struct.ida*, %struct.ida** %3, align 8
  %26 = load i32, i32* @GFP_KERNEL, align 4
  %27 = call i32 @ida_simple_get(%struct.ida* %25, i32 0, i32 0, i32 %26)
  ret i32 %27
}

declare dso_local i64 @is_typec_partner(%struct.device*) #1

declare dso_local %struct.TYPE_6__* @to_typec_partner(%struct.device*) #1

declare dso_local i64 @is_typec_plug(%struct.device*) #1

declare dso_local %struct.TYPE_5__* @to_typec_plug(%struct.device*) #1

declare dso_local %struct.TYPE_4__* @to_typec_port(%struct.device*) #1

declare dso_local i32 @ida_simple_get(%struct.ida*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
